# gildedrose-refactoring-kata

cpp/: CMakeLists.txt  GildedRose.cc  GildedRose.h  README  run-once-cmake.sh
cpp/gilded_rose/: CMakeLists.txt
cpp/gilded_rose/include/gilded_rose/: GildedRose.hh
cpp/gilded_rose/src/: GildedRose.cc
cpp/tests/: CMakeLists.txt
cpp/tests/text/: CMakeLists.txt
cpp/tests/text/src/: GildedRoseTextTests.cc
cpp/tests/unit/: CMakeLists.txt
cpp/tests/unit/src/: GildedRoseUnitTests.cc
